--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
             <div id="aboutContent" class="hidden">
                 <div class="about-container">
                     <div class="about-photo">
-                        <img src="SelfPicture.jpg" alt="Adarsh Jayaram" class="profile-image">
+                        <img src="SelfProfessionalPicture.jpg" alt="Adarsh Jayaram" class="profile-image">
                     </div>
                     <div class="about-text">
                         <div class="about-description">
@@ -1012,7 +1012,7 @@
                 <div class="skills-description">
                     The majority of my expertise - epecially recently - is in networks, systems, and full stack development. I did mostly Java projects in the earlier half of my college years and shifted into python programming for the later half, using it for both schoolwork and for the personal projects which I have developed. I also learned full stack development from contributing to the website in the Northeastern Electric Racing Club and some project based coursework. 
                     
-                    <br><br>Take the skill meters with a grain of salt, it's more of a measure of how much time I spent with each one. I put them lower because I am a junior developer and I feel that I have a lot to learn. 
+                    <br><br>Please take the skill meters with a grain of salt: it's more of a measure of how much time I spent with each one. Reading some of my projects will give you a better idea of my skills. I put my skill percentages lower because I am a junior developer and I feel that I have a lot to learn. 
                     
                     <br><br>Feel free to click on the skills to see the description that I wrote for each one. Project data under skills is fetched from github and then organized by main language, or added manually if not on github.
                 </div>
@@ -1127,7 +1127,7 @@
                             <div class="skill-name">VS CODE</div>
                         </div>
                         <div class="projects-list">
-                            <div class="skill-description">VS Code became my primary and favorite IDE due to its convenience and ease of use. Its vast library of extensions and compatibility with any language makes it both powerful and reliable. Every developer has their own preferred plaform that they feel allows them to write better code, and I prefer this one before I migrate it to the official plaform.</div>
+                            <div class="skill-description">VS Code became my primary and favorite IDE due to its convenience and ease of use. It has a vast library of extensions and compatibility with any language, which makes it both powerful and reliable. Every developer has their own preferred plaform that they feel allows them to write better code, and I prefer to use this one before I migrate it to the official plaform.</div>
                             <div class="github-projects-container" data-language="VS Code"></div>
                         </div>
                     </div>
