made fix so images show on render

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         
         /* HOME PAGE BACKGROUND */
         body.home-active {
-            background-image: url('darkNatureBackgroundPicture.jpg');
+            background-image: url('static/darkNatureBackgroundPicture.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
         }
 
         body.home-active.light-mode {
-            background-image: url('lightNatureBackgroundPicture.jpg');
+            background-image: url('static/lightNatureBackgroundPicture.jpg');
         }
         
         .main-container {
@@ -717,7 +717,7 @@
 
         /* LIGHT MODE STYLES */
         body.light-mode.home-active {
-            background-image: url('lightNatureBackgroundPicture.jpg');
+            background-image: url('static/lightNatureBackgroundPicture.jpg');
         }
 
         body.light-mode .tab {
@@ -965,7 +965,7 @@
                             <span class="home-social-label">Email</span>
                         </a>
 
-                        <a href="AdarshJayaramResume.pdf" class="home-social-link" target="_blank">
+                        <a href="static/AdarshJayaramResume.pdf" class="home-social-link" target="_blank">
                             <img src="https://cdn-icons-png.flaticon.com/512/3580/3580085.png" alt="Resume" class="home-social-icon">
                             <span class="home-social-label">Resume</span>
                         </a>
@@ -980,7 +980,7 @@
             <div id="aboutContent" class="hidden">
                 <div class="about-container">
                     <div class="about-photo">
-                        <img src="SelfProfessionalPicture.jpg" alt="Adarsh Jayaram" class="profile-image">
+                        <img src="static/SelfProfessionalPicture.jpg" alt="Adarsh Jayaram" class="profile-image">
                     </div>
                     <div class="about-text">
                         <div class="about-description">
@@ -1001,7 +1001,7 @@
                                 <strong>Email:</strong> adarshjedi@gmail.com
                             </div>
                             <div class="contact-item">
-                                <strong>Resume:</strong> <a href="AdarshJayaramResume.pdf" target="_blank">Download Resume</a>
+                                <strong>Resume:</strong> <a href="static/AdarshJayaramResume.pdf" target="_blank">Download Resume</a>
                             </div>
                         </div>
                     </div>
@@ -1272,7 +1272,7 @@
                         <span class="social-label">Email</span>
                     </a>
 
-                    <a href="AdarshJayaramResume.pdf" class="social-link" target="_blank">
+                    <a href="static/AdarshJayaramResume.pdf" class="social-link" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/3580/3580085.png" alt="Resume" class="social-icon">
                         <span class="social-label">Resume</span>
                     </a>
